# FlowTrace

./: .gitignore  README.md
.trae/rules/: flowtrace.md
backend/: .env.example  __init__.py  app.py  pyproject.toml  requirements.txt
backend/src/flowtrace/: __init__.py  config.py  db.py  replay.py  routes.py  validation.py  websocket.py
backend/tests/: __init__.py  test_replay.py  test_validation.py
frontend/: index.html  main.js  style.css
