[project]
name = "FlowTrace"
version = "1.0.0"
description = "FlowTrace 是一个面向程序员的工具，这个程序可以侦测API路由的状况"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-sock>=0.4.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.2",
    "DBUtils>=3.1.2",
]
packages = [
    { include = "flowtrace" },
]

[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowtrace"]
